--- a/css/_sass/_service-manual.scss
+++ b/css/_sass/_service-manual.scss
@@ -67,26 +67,20 @@
 }
 
 .style-sm-codesnippet {
-    @include transition-out;
-    border: 1px solid $color-semi-tint--2;
-    border-radius: $border-radius-3;
-    margin: 1em 0 2em;
-    opacity: .5;
-    p {
-        padding: .25em 1em 0;
-    }
-    xmp {
-        background: $color-gray-7;
-        border-radius: $border-radius-1;
-        color: $color-almostblack-analogous-tint--5;
-        max-width: 100%;
-        padding: 1em;
-        white-space: pre-line;
-    }
-    &:hover {
-        @include transition-in;
-        opacity: 1;
-    }
+  @include transition-out;
+  border: 1px solid $color-semi-tint--2;
+  border-top-left-radius: $scale-1;
+  margin: 1em 0 2em;
+  opacity: .5;
+  display: flex;
+  flex-wrap: wrap;
+  p {
+    padding: .25em 1em 0;
+  }
+  &:hover {
+    @include transition-in;
+    opacity: 1;
+  }
 }
 
 @include breakpoint(smallToMedium) {
